[package]
name = "mx-rs"
version = "0.1.0"
edition = "2021"
license = "SPECIFY A LICENSE BEFORE PUBLISHING"
description = "A Rust SDK for interacting with the mx.com API"

[dependencies]
bytes = "1.9"
futures-core = "0.3"
progenitor-client = "0.11.2"
reqwest = { version = "0.12", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
